# trabalho-3-1-autocomplete-Anchel17

./: CMakeLists.txt  README.MD  README.md
data/: desord.txt
include/: database.hpp  interface.hpp  process.hpp
src/: autocomplete  database.cpp  interface.cpp  main.cpp  process.cpp
